# TunedImageSorter

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS_I18N_HYGIENE_EN.txt  DOCS_I18N_HYGIENE_RU.txt  DUAL_GPU_PACKAGING_EN.txt  DUAL_GPU_PACKAGING_RU.txt  ERRORS_EN.txt  ERRORS_RU.txt  FIRST_RUN_EN.txt  FIRST_RUN_RU.txt  GITHUB_SOURCE_UPLOAD_MANIFEST.json  GITHUB_SOURCE_UPLOAD_NOTES.txt  GPU_LITE_EN.txt  GPU_LITE_RU.txt  LICENSE  PRE_RELEASE_POLISH_EN.txt  PRE_RELEASE_POLISH_RU.txt  PRIVACY_LOCAL_PROCESSING_RU.txt  PRODUCT_RENAME_EN.txt  PRODUCT_RENAME_RU.txt  PROFILE_GUIDE_EN.txt  PROFILE_GUIDE_RU.txt  PUBLIC_RELEASE_NOTES_EN.txt  PUBLIC_RELEASE_NOTES_RU.txt  QUICK_START_EN.txt  RC_CHECKLIST_EN.txt  RC_CHECKLIST_RU.txt  README.md  README_EN.txt  README_RU.txt  RELEASE_BUNDLE_EN.txt  RELEASE_BUNDLE_RU.txt  RELEASE_FREEZE_EN.txt  RELEASE_FREEZE_RU.txt  RELEASE_GATE_EN.txt  RELEASE_GATE_RU.txt  SECURITY.md  START_HERE_EN.txt  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-check.yml
docs/: DEVELOPER_NOTES_EN.md  DEVELOPER_NOTES_RU.md  HELP_EN.md  HELP_RU.md  README.md  USER_GUIDE_EN.md  USER_GUIDE_RU.md  index.html
docs/assets/: site.css
docs/developer/: README_WINDOWS_PACKAGING_EN.md
docs/user/: KNOWN_LIMITATIONS_EN.txt  KNOWN_LIMITATIONS_RU.txt  QUICK_START_RU.txt  (+4 more)
face_sorter_mvp/: ARCHITECTURE_FOR_AGENTS.md  README_EN.md  README_RU.md  __init__.py  __main__.py  backend.py  cli.py  cli_wizard.py  face_sorter_mvp.py  file_ops.py  i18n.py
tools/: release_check.py
(+79 files in other folders)
