[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tuned-image-sorter"
version = "69.6"
description = "Local Windows photo sorting tool for grouping large image folders by detected faces."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["photo-sorting", "face-recognition", "windows", "pyinstaller"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics",
]

[project.scripts]
tuned-image-sorter = "face_sorter_mvp.cli:main"
tuned-image-sorter-ui = "face_sorter_mvp.ui:main"

[tool.setuptools.packages.find]
include = ["face_sorter_mvp*"]

[tool.setuptools.package-data]
"face_sorter_mvp.ui.resources" = ["*.png", "*.ico", "README.md"]
